# detection

./: .env.example  .env.native.example  .gitignore  FIXES_APPLIED.md  README.md  benchmark_profiles.py  build_pptx.js  config.json  detection_integra.pptx  gw_debug_out.txt  gw_stderr.txt  gw_stdout.txt  gw_stdout2.txt  gw_stdout3.txt  install_linux.txt  requirements.txt  run.py  run_inference_service.py  run_stack.ps1  run_stack.py  runtime_env.py  runtime_profiles.py  stability_probe.py  start_ui.sh
app/: __init__.py  analyzer.py  config.py  detector.py  inference_service.py  logger_db.py  main.py  pipeline.py  runtime_bridge.py  rust_video_bridge.py
configs/: botsort_loose.yaml  botsort_strict.yaml
docs/: architecture.md  native_analytics_protocol.md  service_split_runbook.md
logs/: benchmark_profiles.json  events.db  events_main.db-shm  events_main.db-wal
native/: CMakeLists.txt  README.md  build_integra.sh
native/alarmd/: main.cpp
native/cuda/: preprocess.cu
native/include/integra/: alarm_sink.hpp  byte_track.hpp  frame_diff_detector.hpp  frame_filter.hpp  geom.hpp  gpu_preprocess.hpp  inference_engine.hpp  integra_ffi.h  iou_tracker.hpp  pipeline.hpp  scene_analyzer.hpp  types.hpp  video_source.hpp  yolo_letterbox.hpp  yolo_postprocess.hpp
native/scripts/: build_engine_msvc.ps1  build_onnx_msvc.ps1  export_yolo_trt_engine.sh  trt_bake_cached.sh
native/src/: alarm_sink.cpp  analyticsd_main.cpp  byte_track.cpp  frame_diff_detector.cpp  frame_filter.cpp  gpu_preprocess.cpp  inference_stub.cpp  integra_ffi.cpp  iou_tracker.cpp  main.cpp  onnx_engine.cpp  opencv_dnn_engine.cpp  pipeline.cpp  scene_analyzer.cpp  shared_engine.cpp  tensorrt_engine.cpp  trt_bake_main.cpp  video_source.cpp  yolo_letterbox.cpp  yolo_postprocess.cpp
pyinfer/: __init__.py  _debug_render.py  _offline_check.py  bytetrack.py  candidates.py  config.py  geom.py  scene_fsm.py  worker.py  yolo_onnx.py  yolo_ultra.py
runtime-core/: Cargo.toml  README.md
runtime-core/src/: config.rs  lib.rs  main.rs
runtime-core/src/integra/: events.rs  ffi.rs  mod.rs  pipeline.rs  preview_encode.rs  stream.rs  tcp_client.rs
scripts/: build_all.ps1  export_onnx.py  run_backend_gateway.ps1  run_stack.ps1
static/: app.js  index.html  styles.css  tailwind-local.css
tools/: requirements-trt-export.txt
video-bridge/: Cargo.toml
video-bridge/src/: main.rs
