[package]
name = "runtime-core"
version = "0.1.0"
edition = "2021"

# Релиз под десктоп/сервер интеграции (меньший бинарь, без отладочных символов).
[profile.release]
strip = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = { version = "0.7", features = ["ws"] }
async-stream = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
# C++ FFI к integra_ffi.dll / libintegra_ffi.so (см. native/include/integra/integra_ffi.h).
# Используется через libloading: cargo build не требует наличия DLL,
# DLL ищется в рантайме (INTEGRA_FFI_PATH / рядом с exe / native/build-*).
libloading = "0.8"
thiserror = "1"
once_cell = "1"
# Системные метрики (RAM, CPU, процессы) для /api/metrics — заменяет psutil из Python.
sysinfo = { version = "0.30", default-features = false }
