[package]
name = "video-bridge"
version = "0.1.0"
edition = "2021"
description = "Decode video in Rust, stream BGR frames to Python (inference + analyzer stay in Python)"

[profile.release]
strip = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
opencv = { version = "0.93", default-features = false, features = ["opencv-4", "videoio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
