[package]
name = "video-bridge"
version = "0.1.0"
edition = "2021"
description = "Decode video in Rust, stream BGR frames to Python (inference + analyzer stay in Python)"

[profile.release]
strip = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# Почти все модули как у default — иначе расходятся core/types и ручной код opencv (узкий набор → E0599).
# CUDA-модули (cudaarithm, cudalegacy, …) отключены: при сборке opencv-world с CUDA заголовки тянут cuda_runtime.h,
# а binding-generator не получает include CUDA Toolkit → fatal error в NCV.hpp. Декод видео через CPU достаточно.
# clang-runtime: парсинг заголовков через libclang (нужен LLVM на Windows).
opencv = { version = "0.98", default-features = false, features = [
    "clang-runtime",
    "3d",
    "alphamat",
    "aruco",
    "aruco_detector",
    "barcode",
    "bgsegm",
    "bioinspired",
    "calib",
    "calib3d",
    "ccalib",
    "cvv",
    "dnn",
    "dnn_superres",
    "dpm",
    "face",
    "features",
    "features2d",
    "flann",
    "freetype",
    "fuzzy",
    "gapi",
    "hdf",
    "hfs",
    "highgui",
    "img_hash",
    "imgcodecs",
    "imgproc",
    "intensity_transform",
    "line_descriptor",
    "mcc",
    "ml",
    "objdetect",
    "optflow",
    "ovis",
    "phase_unwrapping",
    "photo",
    "plot",
    "quality",
    "rapid",
    "rgbd",
    "saliency",
    "sfm",
    "shape",
    "signal",
    "stereo",
    "stitching",
    "structured_light",
    "superres",
    "surface_matching",
    "text",
    "tracking",
    "video",
    "videoio",
    "videostab",
    "viz",
    "wechat_qrcode",
    "xfeatures2d",
    "ximgproc",
    "xobjdetect",
    "xphoto",
    "xstereo",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
